tests/integration/snapshots/tests__integration__parser__parenthesized_binary_operation_alt.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 17,
        },
        source: "((2 * 3) + 1) / 2",
        is_complex: false,
        body: [
            Expression(
                Binary(
                    BinaryExpression {
                        span: Span {
                            start: 0,
                            end: 17,
                        },
                        left: Parenthesized(
                            Single {
                                span: Span {
                                    start: 0,
                                    end: 13,
                                },
                                expression: Binary(
                                    BinaryExpression {
                                        span: Span {
                                            start: 1,
                                            end: 12,
                                        },
                                        left: Parenthesized(
                                            Single {
                                                span: Span {
                                                    start: 1,
                                                    end: 8,
                                                },
                                                expression: Binary(
                                                    BinaryExpression {
                                                        span: Span {
                                                            start: 2,
                                                            end: 7,
                                                        },
                                                        left: NumericLiteral(
                                                            NumericLiteral {
                                                                span: Span {
                                                                    start: 2,
                                                                    end: 3,
                                                                },
                                                                value: 2.0,
                                                                raw: "2",
                                                            },
                                                        ),
                                                        operator: Multiplication,
                                                        right: NumericLiteral(
                                                            NumericLiteral {
                                                                span: Span {
                                                                    start: 6,
                                                                    end: 7,
                                                                },
                                                                value: 3.0,
                                                                raw: "3",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        operator: Addition,
                                        right: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 11,
                                                    end: 12,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        operator: Division,
                        right: NumericLiteral(
                            NumericLiteral {
                                span: Span {
                                    start: 16,
                                    end: 17,
                                },
                                value: 2.0,
                                raw: "2",
                            },
                        ),
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
