tests/integration/snapshots/tests__integration__parser__resource_texture.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 11,
        },
        source: "texture.baz",
        is_complex: false,
        body: [
            Expression(
                Resource(
                    ResourceExpression {
                        span: Span {
                            start: 0,
                            end: 11,
                        },
                        section: Texture,
                        name: IdentifierReference {
                            span: Span {
                                start: 8,
                                end: 11,
                            },
                            name: "baz",
                        },
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
