tests/integration/snapshots/tests__integration__parser__return.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 10,
        },
        source: "return v.a",
        is_complex: false,
        body: [
            Return(
                ReturnStatement {
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                    argument: Variable(
                        VariableExpression {
                            span: Span {
                                start: 7,
                                end: 10,
                            },
                            lifetime: Variable,
                            member: Property {
                                span: Span {
                                    start: 7,
                                    end: 10,
                                },
                                property: IdentifierReference {
                                    span: Span {
                                        start: 9,
                                        end: 10,
                                    },
                                    name: "a",
                                },
                            },
                        },
                    ),
                },
            ),
        ],
    },
    errors: [],
    panicked: false,
}
