tests/integration/snapshots/tests__integration__parser__string.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 19,
        },
        source: "'foo_bar123.-$#*()'",
        is_complex: false,
        body: [
            Expression(
                StringLiteral(
                    StringLiteral {
                        span: Span {
                            start: 0,
                            end: 19,
                        },
                        value: "foo_bar123.-$#*()",
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
