tests/integration/snapshots/tests__integration__parser__this.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 4,
        },
        source: "this",
        is_complex: false,
        body: [
            Expression(
                This(
                    ThisExpression {
                        span: Span {
                            start: 0,
                            end: 4,
                        },
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
