tests/integration/snapshots/tests__integration__parser__unclosed_parenthesis_in_call.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "q.a(1",
        is_complex: false,
        body: [],
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Expected `)` but found `EOF`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: Some(
                                "Here",
                            ),
                            span: SourceSpan {
                                offset: SourceOffset(
                                    5,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
    panicked: true,
}
